--- a/WebSite/VpnSite/Views/resetpassword/Index.cshtml
+++ b/WebSite/VpnSite/Views/resetpassword/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 @{
-	string attemptedemail = VpnSite.Helpers.GlobalHelper.RequestEncodedParam("email");
+	string attemptedemail = ViewData["email"]?.ToString();
 	if (attemptedemail == null)
 	{
 		attemptedemail="";
