--- a/WebSite/VpnSite/Views/setup/Index.cshtml
+++ b/WebSite/VpnSite/Views/setup/Index.cshtml
@@ -91,7 +91,7 @@
      @{
      <text>   
     $(document).ready(function () {
-         Setup.Init(@(VpnSite.Helpers.SessionVariables.Instance.LoggedIn.ToString().ToLower() + ", " + Model.ActiveAccount.ToString().ToLower()));
+         Setup.Init(@(Majorsilence.Vpn.Site.Helpers.SessionVariables.Instance.LoggedIn.ToString().ToLower() + ", " + Model.ActiveAccount.ToString().ToLower()));
      });
 	     
      </text>
