--- a/WebSite/VpnSite/Views/admininvitebetausers/Index.cshtml
+++ b/WebSite/VpnSite/Views/admininvitebetausers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.AdminInviteBetaUsers
+﻿@model Majorsilence.Vpn.Site.Models.AdminInviteBetaUsers
 @{
     ViewBag.Title = "Admin Invite Beta Users";
     Layout = "~/Views/AdminView.cshtml";
