--- a/WebSite/VpnSite/Views/adminregions/Index.cshtml
+++ b/WebSite/VpnSite/Views/adminregions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.AdminRegions
+﻿@model Majorsilence.Vpn.Site.Models.AdminRegions
 @{
     ViewBag.Title = "Admin Regions";
     Layout = "~/Views/AdminView.cshtml";
