--- a/WebSite/VpnSite/Views/adminvpnservers/Index.cshtml
+++ b/WebSite/VpnSite/Views/adminvpnservers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.AdminVpnServers
+﻿@model Majorsilence.Vpn.Site.Models.AdminVpnServers
 @{
     ViewBag.Title = "Admin VPN Servers";
     Layout = "~/Views/AdminView.cshtml";
