--- a/WebSite/VpnSite/Views/knowledgebase/Index.cshtml
+++ b/WebSite/VpnSite/Views/knowledgebase/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.KnowledgeBase
+﻿@model Majorsilence.Vpn.Site.Models.KnowledgeBase
 @{
     ViewBag.Title = "Knowledge Base";
     Layout = "~/Views/GeneralLayout.cshtml";
