--- a/WebSite/VpnSite/Views/pricing/Index.cshtml
+++ b/WebSite/VpnSite/Views/pricing/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.Pricing
+﻿@model Majorsilence.Vpn.Site.Models.Pricing
 @{
     ViewBag.Title = "Pricing";
     Layout = "~/Views/GeneralLayout.cshtml";
