--- a/WebSite/VpnSite/Views/privacy/Index.cshtml
+++ b/WebSite/VpnSite/Views/privacy/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.Privacy
+﻿@model Majorsilence.Vpn.Site.Models.Privacy
 @{
     ViewBag.Title = "Privacy Policy";
     Layout = "~/Views/GeneralLayout.cshtml";
