--- a/WebSite/VpnSite/Views/setup/Index.cshtml
+++ b/WebSite/VpnSite/Views/setup/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.Setup
+﻿@model Majorsilence.Vpn.Site.Models.Setup
 @{
     ViewBag.Title = "Setup";
     Layout = "~/Views/GeneralLayout.cshtml";
