--- a/WebSite/VpnSite/Views/terms/Index.cshtml
+++ b/WebSite/VpnSite/Views/terms/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VpnSite.Models.Terms
+﻿@model Majorsilence.Vpn.Site.Models.Terms
 @{
     ViewBag.Title = "Terms of Service";
     Layout = "~/Views/GeneralLayout.cshtml";
