start switch over to .net core 3.1 style localization

--- a/WebSite/VpnSite/Views/LoggedInView.cshtml
+++ b/WebSite/VpnSite/Views/LoggedInView.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
     Layout = "~/Views/Vpn.cshtml";
-    
-	if (Majorsilence.Vpn.Site.Helpers.SessionVariables.Instance.LoggedIn == false)
-	{
-		Response.Redirect("/noaccess/", false);
-		return;
-	}
+
+    if (Majorsilence.Vpn.Site.Helpers.SessionVariables.Instance.LoggedIn == false)
+    {
+        this.ViewContext.HttpContext.Response.Redirect("/noaccess/", false);
+        return;
+    }
 }
 	<br />
 
