--- a/WebSite/VpnSite/Views/Vpn.cshtml
+++ b/WebSite/VpnSite/Views/Vpn.cshtml
@@ -97,7 +97,7 @@
 
 		if (pagename == "/setup")
         {
-			menu.Append("<li class=\"active\"><a href=\"/setup\"><span>" + Resources.Main.MenuSetup + "</span></a></li>");
+			menu.Append("<li class=\"active\"><a href=\"/setup\"><span>" + Majorsilence.Vpn.Site.Resources.Main.MenuSetup + "</span></a></li>");
         }
         else
         {
@@ -165,9 +165,9 @@
 	        					<li><a href="/admin">Admin</a></li>
 	        				}
         				}
-						<li><a href="/account">@Resources.Main.MenuAccount</a></li>
+						<li><a href="/account">@Majorsilence.Vpn.Site.Resources.Main.MenuAccount</a></li>
 						<li><a href="/invite">Invite Friends</a></li>
-						<li><a href="/logout"> @Resources.Main.MenuLogout</a></li>
+						<li><a href="/logout"> @Majorsilence.Vpn.Site.Resources.Main.MenuLogout</a></li>
 
 					</ul>
 				</li>
@@ -206,17 +206,17 @@
       </div>
       <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
-          	<li><a href="/terms" class="navbar-link">@Resources.Main.FooterTos</a></li>				 
+          	<li><a href="/terms" class="navbar-link">@Majorsilence.Vpn.Site.Resources.Main.FooterTos</a></li>				 
         </ul>
       </div>
       <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">			
-			<li><a href="/privacy">@Resources.Main.FooterPPolicy</a></li>     
+			<li><a href="/privacy">@Majorsilence.Vpn.Site.Resources.Main.FooterPPolicy</a></li>     
         </ul>
       </div>
       <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
-          	<li><a href="/pricing">@Resources.Main.FooterPrice</a></li>			
+          	<li><a href="/pricing">@Majorsilence.Vpn.Site.Resources.Main.FooterPrice</a></li>			
         </ul>
       </div>
       <div class="col-md-2">
@@ -226,7 +226,7 @@
       </div>
       <div class="col-md-2">
 		<ul class="nav nav-pills nav-stacked">		
-			<li><a href="/about">@Resources.Main.MenuAboutUs</a></li>
+			<li><a href="/about">@Majorsilence.Vpn.Site.Resources.Main.MenuAboutUs</a></li>
 		</ul>
       </div>
       <div class="col-md-1">
@@ -238,7 +238,7 @@
         <div class="col-lg-12">
             <ul class="nav nav-pills nav-justified">
             <li>@Html.Raw(Resources.Main.FooterCopR)
-            <strong itemscope itemtype="https://schema.org/Organization">@Resources.Main.CompanyName</strong>
+            <strong itemscope itemtype="https://schema.org/Organization">@Majorsilence.Vpn.Site.Resources.Main.CompanyName</strong>
             </li>
              <li>	            <select id="lanSelect" class="form-control">
 	                <option value="en" class="form-control">English</option>
