--- a/WebSite/VpnSite/Views/account/settings.cshtml
+++ b/WebSite/VpnSite/Views/account/settings.cshtml
@@ -1,19 +1,15 @@
 ﻿@model Majorsilence.Vpn.Site.Models.Account
-@{
-    ViewBag.Title = "Account Payments";
-    Layout = "~/Views/LoggedInView.cshtml";
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@{ ViewBag.Title = "Account Payments";
+                Layout = "~/Views/LoggedInView.cshtml"; }
 
-}
+<ul class="list-group">
+    @{ if (((bool)ViewData["IsAdmin"]))
+        {
+<li class="list-group-item"><a href="/admin">Admin</a></li> } }
 
-    <ul class="list-group">
-	@{
-		if (((bool)ViewData["IsAdmin"]))
-		{
-			<li class="list-group-item"><a href="/admin">Admin</a></li>
-		}
-	}
-
-		<li class="list-group-item"><a href="/account">@Resources.Main.MenuAccount</a></li>
-		<li class="list-group-item"><a href="/invite">Invite Friends</a></li>
-		<li class="list-group-item"><a href="/logout"> @Resources.Main.MenuLogout</a></li>
-	</ul>
+    <li class="list-group-item"><a href="/account">@Localizer["MenuAccount"]</a></li>
+    <li class="list-group-item"><a href="/invite">Invite Friends</a></li>
+    <li class="list-group-item"><a href="/logout"> @Localizer["MenuLogout"]</a></li>
+</ul>
