--- a/WebSite/VpnSite/Views/logout/Index.cshtml
+++ b/WebSite/VpnSite/Views/logout/Index.cshtml
@@ -5,7 +5,7 @@
     HttpContext.Current.Session.Contents.RemoveAll();
 }
 
-<h1>@Resources.Main.MenuLogout</h1>
+<h1>@Majorsilence.Vpn.Site.Resources.Main.MenuLogout</h1>
 
 You are now logged out.
 
