--- a/WebSite/VpnSite/Views/pricing/Index.cshtml
+++ b/WebSite/VpnSite/Views/pricing/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/GeneralLayout.cshtml";
 }
 
-<h1>@Resources.Main.FooterPrice</h1>
+<h1>@Majorsilence.Vpn.Site.Resources.Main.FooterPrice</h1>
   
     <table class="table">
   <thead>
