--- a/WebSite/VpnSite/Views/privacy/Index.cshtml
+++ b/WebSite/VpnSite/Views/privacy/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/GeneralLayout.cshtml";
 }
 
-<h1>@Resources.Main.FooterPPolicy</h1>
+<h1>@Majorsilence.Vpn.Site.Resources.Main.FooterPPolicy</h1>
 
 @Html.Raw(Model.CurrentPrivacy.Policy)
 
