--- a/WebSite/VpnSite/Views/resetpassword/Index.cshtml
+++ b/WebSite/VpnSite/Views/resetpassword/Index.cshtml
@@ -11,9 +11,9 @@
 	}
 }
 
-<h1>@Resources.Main.ResetPassword</h1>
+<h1>@Majorsilence.Vpn.Site.Resources.Main.ResetPassword</h1>
 <form name="input" method="post" class="form">
-    <b>@Resources.Main.Email:</b>
+    <b>@Majorsilence.Vpn.Site.Resources.Main.Email:</b>
     	@{	 
 			
 	 		if(attemptedemail != "")
