--- a/WebSite/VpnSite/Views/signup/Index.cshtml
+++ b/WebSite/VpnSite/Views/signup/Index.cshtml
@@ -5,18 +5,18 @@
 
 
 <br />
-<h1>@Resources.Main.MenuSignUp</h1>
+<h1>@Majorsilence.Vpn.Site.Resources.Main.MenuSignUp</h1>
 
 
 <form name="input" method="post">
 	<div class="form-group">		
         <b>Beta Key:</b> <input type="text" name="fname" class="form-control" id="betaKeyText" placeholder = "Beta Key" /><br />
-        <b>@Resources.Main.FirstName:</b> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" /><br />
-        <b>@Resources.Main.LastName:</b> <input type="text" name="lname" class="form-control" id="lname" placeholder = "Last Name" /><br />
-        <b>@Resources.Main.Email:</b> <input type="email" name="email" class="form-control" id="email" placeholder = "Email Address" autocorrect="off" autocapitalize="off" /><br />
-        <b>@Resources.Main.ConfirmEmail:</b> <input type="email" name="cemail" class="form-control" id="cemail" placeholder = "Confirm Email Address" autocorrect="off" autocapitalize="off" /><br />
-        <b>@Resources.Main.Password:</b> <input type="password" name="password" class="form-control" id="password" placeholder = "Password" autocorrect="off" autocapitalize="off" /><br />
-        <b>@Resources.Main.ConfirmPassword:</b> <input type="password" name="cpassword" class="form-control" id="cpassword" placeholder = "Confirm Password" autocorrect="off" autocapitalize="off" /><br />
+        <b>@Majorsilence.Vpn.Site.Resources.Main.FirstName:</b> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" /><br />
+        <b>@Majorsilence.Vpn.Site.Resources.Main.LastName:</b> <input type="text" name="lname" class="form-control" id="lname" placeholder = "Last Name" /><br />
+        <b>@Majorsilence.Vpn.Site.Resources.Main.Email:</b> <input type="email" name="email" class="form-control" id="email" placeholder = "Email Address" autocorrect="off" autocapitalize="off" /><br />
+        <b>@Majorsilence.Vpn.Site.Resources.Main.ConfirmEmail:</b> <input type="email" name="cemail" class="form-control" id="cemail" placeholder = "Confirm Email Address" autocorrect="off" autocapitalize="off" /><br />
+        <b>@Majorsilence.Vpn.Site.Resources.Main.Password:</b> <input type="password" name="password" class="form-control" id="password" placeholder = "Password" autocorrect="off" autocapitalize="off" /><br />
+        <b>@Majorsilence.Vpn.Site.Resources.Main.ConfirmPassword:</b> <input type="password" name="cpassword" class="form-control" id="cpassword" placeholder = "Confirm Password" autocorrect="off" autocapitalize="off" /><br />
         <input type="submit" value="Submit" id="createuser" class="btn btn-primary btn-lg" />
     </div>
 </form>
