--- a/WebSite/VpnSite/Views/validatecode/Index.cshtml
+++ b/WebSite/VpnSite/Views/validatecode/Index.cshtml
@@ -13,10 +13,10 @@
 }
 
 
-<h1>@Resources.Main.ResetPassword</h1>
+<h1>@Majorsilence.Vpn.Site.Resources.Main.ResetPassword</h1>
 
 <form name="input" method="post" class="form">
-    <b>@Resources.Main.ResetCode:</b>
+    <b>@Majorsilence.Vpn.Site.Resources.Main.ResetCode:</b>
 	
 	@{	 
  		if(resetcode != "")
@@ -31,10 +31,10 @@
 
    
 
-    <b>@Resources.Main.NewPassword:</b>
+    <b>@Majorsilence.Vpn.Site.Resources.Main.NewPassword:</b>
     <input type="password" name="code" id="newpsw" placeholder="New Password" class="form-control" autocorrect="off" autocapitalize="off" /><br />
 
-    <b>@Resources.Main.ConfirmPassword:</b>
+    <b>@Majorsilence.Vpn.Site.Resources.Main.ConfirmPassword:</b>
     <input type="password" name="code" id="cnewpsw" placeholder="Confirm Password" class="form-control" autocorrect="off" autocapitalize="off" /><br />
     <input type="submit" value="Submit" id="validatemyresetcode" class="btn btn-success" />
 </form>
