--- a/WebSite/VpnSite/Views/adminregions/Index.cshtml
+++ b/WebSite/VpnSite/Views/adminregions/Index.cshtml
@@ -23,16 +23,16 @@
 
 		html.Append("<td>");
 		html.Append(string.Format("<a href=\"/adminregionsedit?id={0}&desc={1}&active={2}\">{0}</a>", 
-			region.Id, HttpUtility.HtmlEncode(region.Description),
+			region.Id, Majorsilence.Vpn.Site.Helpers.GlobalHelper.HtmlEncode(region.Description),
 			region.Active? "checked":""));
 		html.Append("</td>");
 
 		html.Append("<td>");
-		html.Append(HttpUtility.HtmlEncode(region.Description));
+		html.Append(Majorsilence.Vpn.Site.Helpers.GlobalHelper.HtmlEncode(region.Description));
 		html.Append("</td>");
 
 		html.Append("<td>");
-		html.Append(HttpUtility.HtmlEncode(region.Active));
+		html.Append(Majorsilence.Vpn.Site.Helpers.GlobalHelper.HtmlEncode(region.Active.ToString()));
 		html.Append("</td>");
 
 		html.Append("</tr>");
