--- a/WebSite/VpnSite/Views/adminvpnservers/Index.cshtml
+++ b/WebSite/VpnSite/Views/adminvpnservers/Index.cshtml
@@ -27,13 +27,13 @@
 
 	    html.Append("<td>");
 	    html.Append(string.Format("<a href=\"/adminvpnserversedit?id={0}&address={1}&port={2}&desc={3}&region={4}&active={5}\">{0}</a>",
-	                              vpn.Id, HttpUtility.HtmlEncode(vpn.Address),
-	                              vpn.VpnPort, HttpUtility.HtmlEncode(vpn.Description),
+	                              vpn.Id, Majorsilence.Vpn.Site.Helpers.GlobalHelper.HtmlEncode(vpn.Address),
+	                              vpn.VpnPort, Majorsilence.Vpn.Site.Helpers.GlobalHelper.HtmlEncode(vpn.Description),
 	                              vpn.RegionId, vpn.Active? "checked":""));
 	    html.Append("</td>");
 
 	    html.Append("<td>");
-	    html.Append(HttpUtility.HtmlEncode(vpn.Address));
+	    html.Append(Majorsilence.Vpn.Site.Helpers.GlobalHelper.HtmlEncode(vpn.Address));
 	    html.Append("</td>");
 
 	    html.Append("<td>");
@@ -41,7 +41,7 @@
 	    html.Append("</td>");
 
 	    html.Append("<td>");
-	    html.Append(HttpUtility.HtmlEncode(vpn.Description));
+	    html.Append(Majorsilence.Vpn.Site.Helpers.GlobalHelper.HtmlEncode(vpn.Description));
 	    html.Append("</td>");
 
 	    html.Append("<td>");
