--- a/WebSite/VpnSite/Views/terms/Index.cshtml
+++ b/WebSite/VpnSite/Views/terms/Index.cshtml
@@ -4,6 +4,6 @@
     Layout = "~/Views/GeneralLayout.cshtml";
 }
 
- <h1>@Resources.Main.FooterTos</h1>
+ <h1>@Majorsilence.Vpn.Site.Resources.Main.FooterTos</h1>
 
  @Html.Raw(Model.TOS.Terms)
