continue converting to asp.net core 3.1

--- a/WebSite/VpnSite/Views/AdminView.cshtml
+++ b/WebSite/VpnSite/Views/AdminView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Majorsilence.Vpn.Site.Models.AdminViewLayout
+﻿@model Majorsilence.Vpn.Site.Models.CustomViewLayout
 @{
     Layout = "~/Views/Vpn.cshtml";
     
