--- a/WebSite/VpnSite/Views/Vpn.cshtml
+++ b/WebSite/VpnSite/Views/Vpn.cshtml
@@ -1,31 +1,30 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@model Majorsilence.Vpn.Site.Models.CustomViewLayout
+<!DOCTYPE html>
 
-@{
-
-    var x = new Majorsilence.Vpn.Site.Models.Vpn();
+@{ var x = new Majorsilence.Vpn.Site.Models.Vpn();
 
     x.InitCultureByCookie();
-    x.InitCultureByPram ();
-
-}
+    x.InitCultureByPram(""); }
 
 <html id="html" xmlns="http://www.w3.org/1999/xhtml">
-<head>   
-    <meta charset="UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:image" content="/assets/images/striplogo.png" />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="/assets/images/striplogo.png" />
     <title>Majorsilence VPN - @ViewBag.Title</title>
     <link rel="stylesheet" type="text/css" href="/assets/styles/style.css" media="all" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/bootstrap-notify.css" media="all" />
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" />
-    <link rel="image_src"  type="image/jpeg" href="/assets/images/striplogo.png" />
+    <link rel="image_src" type="image/jpeg" href="/assets/images/striplogo.png" />
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js" type="text/javascript"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
 
-   
+
     <!-- if cdn fails load local copy of jquery-->
     <script type="text/javascript">
         if (typeof jQuery == 'undefined') {
@@ -36,12 +35,12 @@
     <script src="/assets/javascript/bootstrap-notify.js" type="text/javascript"></script>
     <script src="/assets/javascript/jquery.blockUI.js" type="text/javascript"></script>
     <script src="/assets/javascript/helpers.js" type="text/javascript"></script>
-    <script src="/assets/javascript/jquery.ui.touch-punch.min.js" type="text/javascript"></script> 
+    <script src="/assets/javascript/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
     <script src="/assets/javascript/login.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
-           
+
             Helpers.Init();
             Login.Init();
 
@@ -50,211 +49,205 @@
     </script>
 
 
-	@RenderSection("head", false)
-    
+    @RenderSection("head", false)
+
 </head>
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="majorsitenav">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="majorsitenav">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-      <div itemscope itemtype="http://schema.org/Organization">
-      <a class="navbar-brand" itemprop="url" href="/">
-      	<img itemprop="logo" src="/assets/images/striplogo.png" alt="Majorsilence VPN" height="25px" />
-      </a>
-      <a class="navbar-brand" href="/">Majorsilence VPN</a>
-      </div> 
-    </div>
-    <div class="navbar-collapse collapse">
-     @{
-     	var menu = new System.Text.StringBuilder();
-        var pagename = Request.Url.AbsolutePath;
-     	
-		if (pagename == "/services")
-        {
-			menu.Append("<li class=\"active\"><a href=\"/services\"><span>" + Resources.Main.MenuServices + "</span></a></li>");
-        }
-        else
-        {
-            menu.Append("<li><a href=\"/services\"><span>" + Resources.Main.MenuServices + "</span></a></li>");
-        }
+                <div itemscope itemtype="http://schema.org/Organization">
+                    <a class="navbar-brand" itemprop="url" href="/">
+                        <img itemprop="logo" src="/assets/images/striplogo.png" alt="Majorsilence VPN" height="25px" />
+                    </a>
+                    <a class="navbar-brand" href="/">Majorsilence VPN</a>
+                </div>
+            </div>
+            <div class="navbar-collapse collapse">
+                @{ var menu = new System.Text.StringBuilder();
+                    var pagename = this.ViewContext.HttpContext.Request.Path;
 
-        if (pagename == "/newsfeed")
-        {
-			menu.Append("<li class=\"active\"><a href=\"/newsfeed\"><span>News</span></a></li>");
-        }
-        else
-        {
-            menu.Append("<li><a href=\"/newsfeed\"><span>News</span></a></li>");
-        }
+                    if (pagename == "/services")
+                    {
+                        menu.Append("<li class=\"active\"><a href=\"/services\"><span>" + Localizer["MenuServices"] + "</span></a></li>");
+                    }
+                    else
+                    {
+                        menu.Append("<li><a href=\"/services\"><span>" + Localizer["MenuServices"] + "</span></a></li>");
+                    }
 
-		if (pagename == "/setup")
-        {
-			menu.Append("<li class=\"active\"><a href=\"/setup\"><span>" + Majorsilence.Vpn.Site.Resources.Main.MenuSetup + "</span></a></li>");
-        }
-        else
-        {
-            menu.Append("<li><a href=\"/setup\"><span>" + Resources.Main.MenuSetup + "</span></a></li>");
-        }
- 		if (Majorsilence.Vpn.Site.Helpers.SessionVariables.Instance.LoggedIn)
-        {
-	        if (pagename == "/support")
-	        {
-				menu.Append("<li class=\"active\"><a href=\"/support\"><span>Support</span></a></li>");
-	        }
-	        else
-	        {
-	            menu.Append("<li><a href=\"/support\"><span>Support</span></a></li>");
-	        }
-        }
-        
-        var signinItem = new System.Text.StringBuilder();
-        if (!Majorsilence.Vpn.Site.Helpers.SessionVariables.Instance.LoggedIn)
-		{
-			// see http://www.bootply.com/93545 and http://www.bootply.com/render/93545
-			// Section is visible in non collapsed navbar
-			signinItem.Append ("<ul class=\"nav navbar-nav navbar-right visible-sm visible-md visible-lg\">");
-			signinItem.Append ("<li class=\"dropdown\">");
-			signinItem.Append ("<a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">Sign In<b class=\"caret\"></b></a>");
-			signinItem.Append ("<ul class=\"dropdown-menu\" style=\"padding: 10px;min-width:240px;\">");  
-			signinItem.Append ("<form class=\"form\" role=\"form\" method=\"post\">");
-			signinItem.Append ("<div class=\"form-group\">");
-			signinItem.Append ("<input type=\"text\" placeholder=\"Email\" class=\"form-control\" id=\"email_login\" autocorrect=\"off\" autocapitalize=\"off\">");
-			signinItem.Append ("</div>");
-			signinItem.Append ("<div class=\"form-group\">");
-			signinItem.Append ("<input type=\"password\" placeholder=\"Password\" class=\"form-control\" id=\"password_login\" autocorrect=\"off\" autocapitalize=\"off\">");
-			signinItem.Append ("</div>");
-			signinItem.Append ("<input type=\"submit\" class=\"btn btn-success\" id=\"logmein\" value=\"Sign in\" style=\"margin-top:.75em;width: 100%; height: 32px; font-size: 13px;\">");
-			signinItem.Append ("</form>");
-			signinItem.Append ("</ul>");           
-			signinItem.Append ("</li>");    
-			signinItem.Append ("</ul>");   
+                    if (pagename == "/newsfeed")
+                    {
+                        menu.Append("<li class=\"active\"><a href=\"/newsfeed\"><span>News</span></a></li>");
+                    }
+                    else
+                    {
+                        menu.Append("<li><a href=\"/newsfeed\"><span>News</span></a></li>");
+                    }
 
-			// This section is visble in collapsed navbar
-			menu.Append("<li class=\"visible-xs\"><a href=\"/login\"><span>Sign In</span></a></li>");
-        }
-        else
-        {
-        	menu.Append("<li class=\"visible-xs\"><a href=\"/account/settings\"><span>Account Settings</span></a></li>");
-        }
+                    if (pagename == "/setup")
+                    {
+                        menu.Append("<li class=\"active\"><a href=\"/setup\"><span>" + Localizer["MenuSetup"] + "</span></a></li>");
+                    }
+                    else
+                    {
+                        menu.Append("<li><a href=\"/setup\"><span>" + Localizer["MenuSetup"] + "</span></a></li>");
+                    }
+                    if (Model.SessionVariables.LoggedIn)
+                    {
+                        if (pagename == "/support")
+                        {
+                            menu.Append("<li class=\"active\"><a href=\"/support\"><span>Support</span></a></li>");
+                        }
+                        else
+                        {
+                            menu.Append("<li><a href=\"/support\"><span>Support</span></a></li>");
+                        }
+                    }
 
-        <ul class="nav navbar-nav">
-        	@Html.Raw(menu.ToString())
-        </ul>
+                    var signinItem = new System.Text.StringBuilder();
+                    if (!Model.SessionVariables.LoggedIn)
+                    {
+                        // see http://www.bootply.com/93545 and http://www.bootply.com/render/93545
+                        // Section is visible in non collapsed navbar
+                        signinItem.Append("<ul class=\"nav navbar-nav navbar-right visible-sm visible-md visible-lg\">");
+                        signinItem.Append("<li class=\"dropdown\">");
+                        signinItem.Append("<a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">Sign In<b class=\"caret\"></b></a>");
+                        signinItem.Append("<ul class=\"dropdown-menu\" style=\"padding: 10px;min-width:240px;\">");
+                        signinItem.Append("<form class=\"form\" role=\"form\" method=\"post\">");
+                        signinItem.Append("<div class=\"form-group\">");
+                        signinItem.Append("<input type=\"text\" placeholder=\"Email\" class=\"form-control\" id=\"email_login\" autocorrect=\"off\" autocapitalize=\"off\">");
+                        signinItem.Append("</div>");
+                        signinItem.Append("<div class=\"form-group\">");
+                        signinItem.Append("<input type=\"password\" placeholder=\"Password\" class=\"form-control\" id=\"password_login\" autocorrect=\"off\" autocapitalize=\"off\">");
+                        signinItem.Append("</div>");
+                        signinItem.Append("<input type=\"submit\" class=\"btn btn-success\" id=\"logmein\" value=\"Sign in\" style=\"margin-top:.75em;width: 100%; height: 32px; font-size: 13px;\">");
+                        signinItem.Append("</form>");
+                        signinItem.Append("</ul>");
+                        signinItem.Append("</li>");
+                        signinItem.Append("</ul>");
 
+                        // This section is visble in collapsed navbar
+                        menu.Append("<li class=\"visible-xs\"><a href=\"/login\"><span>Sign In</span></a></li>");
+                    }
+                    else
+                    {
+                        menu.Append("<li class=\"visible-xs\"><a href=\"/account/settings\"><span>Account Settings</span></a></li>");
+                    }
 
-       if (Majorsilence.Vpn.Site.Helpers.SessionVariables.Instance.LoggedIn)
-        {
-
-        	
-
-			<ul class="nav navbar-nav navbar-right visible-sm visible-md visible-lg">
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span></a>
-					<ul class="dropdown-menu">
-						@{
-							if (Majorsilence.Vpn.Site.Helpers.SessionVariables.Instance.IsAdmin)
-	        				{
-	        					<li><a href="/admin">Admin</a></li>
-	        				}
-        				}
-						<li><a href="/account">@Majorsilence.Vpn.Site.Resources.Main.MenuAccount</a></li>
-						<li><a href="/invite">Invite Friends</a></li>
-						<li><a href="/logout"> @Majorsilence.Vpn.Site.Resources.Main.MenuLogout</a></li>
-
-					</ul>
-				</li>
-			</ul>
-        }
-        else
-        {
-        	@Html.Raw(signinItem.ToString ())
-        }
-		
-
-     }
+                    <ul class="nav navbar-nav">
+                        @Html.Raw(menu.ToString())
+                    </ul> if (Model.SessionVariables.LoggedIn)
+                    {
 
 
-    </div><!--/.navbar-collapse -->
-    <div id="message"></div>
-  </div>
-</div>
-      
 
-<div id="body">
-	<br /><br />
-    
-     <div id="loadingdialog" title=""> 
-    </div>
-    	
-		@RenderBody()
-        
+                        <ul class="nav navbar-nav navbar-right visible-sm visible-md visible-lg">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span></a>
+                                <ul class="dropdown-menu">
+                                    @{ if (Model.SessionVariables.IsAdmin)
+                                        {
+                                            <li><a href="/admin">Admin</a></li>
+ } }
+                                    <li><a href="/account">@Localizer["MenuAccount"]</a></li>
+                                    <li><a href="/invite">Invite Friends</a></li>
+                                    <li><a href="/logout"> @Localizer["MenuLogout"]</a></li>
 
-</div>
-<div class="container text-center">
-    <hr />
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="col-md-1">
-      </div>
-      <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked">
-          	<li><a href="/terms" class="navbar-link">@Majorsilence.Vpn.Site.Resources.Main.FooterTos</a></li>				 
-        </ul>
-      </div>
-      <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked">			
-			<li><a href="/privacy">@Majorsilence.Vpn.Site.Resources.Main.FooterPPolicy</a></li>     
-        </ul>
-      </div>
-      <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked">
-          	<li><a href="/pricing">@Majorsilence.Vpn.Site.Resources.Main.FooterPrice</a></li>			
-        </ul>
-      </div>
-      <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked">		
-			<li><a href="/security">Security</a></li>
-        </ul>
-      </div>
-      <div class="col-md-2">
-		<ul class="nav nav-pills nav-stacked">		
-			<li><a href="/about">@Majorsilence.Vpn.Site.Resources.Main.MenuAboutUs</a></li>
-		</ul>
-      </div>
-      <div class="col-md-1">
-      </div>
-    </div>
-  </div>
-  <hr>
-    <div class="row">
-        <div class="col-lg-12">
-            <ul class="nav nav-pills nav-justified">
-            <li>@Html.Raw(Resources.Main.FooterCopR)
-            <strong itemscope itemtype="https://schema.org/Organization">@Majorsilence.Vpn.Site.Resources.Main.CompanyName</strong>
-            </li>
-             <li>	            <select id="lanSelect" class="form-control">
-	                <option value="en" class="form-control">English</option>
-	                <option value="fr">French</option>
-	                <option value="es">Spanish</option>
-	                <option value="zh">Chinese</option>
-	            </select></li>
-                <li><a href="https://www.positivessl.com" style="font-family: arial; font-size: 10px; color: #212121; text-decoration: none;">
-		            	<img src="https://www.positivessl.com/images-new/PositiveSSL_tl_trans.png" alt="Positive SSL on a transparent background" title="Positive SSL on a transparent background" border="0" />
-		            </a></li>
-               
+                                </ul>
+                            </li>
+                        </ul> }
+                    else
+                    {
+                        @Html.Raw(signinItem.ToString()) } }
 
-            </ul>
+
+            </div><!--/.navbar-collapse -->
+            <div id="message"></div>
         </div>
     </div>
-</div>
+
+
+    <div id="body">
+        <br /><br />
+
+        <div id="loadingdialog" title="">
+        </div>
+
+        @RenderBody()
+
+
+    </div>
+    <div class="container text-center">
+        <hr />
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-2">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href="/terms" class="navbar-link">@Localizer["FooterTos"]</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href="/privacy">@Localizer["FooterPPolicy"]</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href="/pricing">@Localizer["FooterPrice"]</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href="/security">Security</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href="/about">@Localizer["MenuAboutUs"]</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-1">
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="nav nav-pills nav-justified">
+                    <li>
+                        @Html.Raw(Localizer["FooterCopR"])
+                        <strong itemscope itemtype="https://schema.org/Organization">@Localizer["CompanyName"]</strong>
+                    </li>
+                    <li>
+                        <select id="lanSelect" class="form-control">
+                            <option value="en" class="form-control">English</option>
+                            <option value="fr">French</option>
+                            <option value="es">Spanish</option>
+                            <option value="zh">Chinese</option>
+                        </select>
+                    </li>
+                    <li>
+                        <a href="https://www.positivessl.com" style="font-family: arial; font-size: 10px; color: #212121; text-decoration: none;">
+                            <img src="https://www.positivessl.com/images-new/PositiveSSL_tl_trans.png" alt="Positive SSL on a transparent background" title="Positive SSL on a transparent background" border="0" />
+                        </a>
+                    </li>
+
+
+                </ul>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
