--- a/WebSite/VpnSite/Views/adminvpnserversedit/editservers.cshtml
+++ b/WebSite/VpnSite/Views/adminvpnserversedit/editservers.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
     ViewBag.Title = "Admin Edit Servers";
     Layout = "~/Views/AdminView.cshtml";
-     Response.Redirect("/adminvpnservers");
+     this.ViewContext.HttpContext.Response.Redirect("/adminvpnservers");
 }
