--- a/WebSite/VpnSite/Views/signup/Index.cshtml
+++ b/WebSite/VpnSite/Views/signup/Index.cshtml
@@ -1,22 +1,24 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@{
     ViewBag.Title = "Sign up";
     Layout = "~/Views/GeneralLayout.cshtml";
 }
 
 
 <br />
-<h1>@Majorsilence.Vpn.Site.Resources.Main.MenuSignUp</h1>
+<h1>@Localizer["MenuSignUp"]</h1>
 
 
 <form name="input" method="post">
-	<div class="form-group">		
-        <b>Beta Key:</b> <input type="text" name="fname" class="form-control" id="betaKeyText" placeholder = "Beta Key" /><br />
-        <b>@Majorsilence.Vpn.Site.Resources.Main.FirstName:</b> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" /><br />
-        <b>@Majorsilence.Vpn.Site.Resources.Main.LastName:</b> <input type="text" name="lname" class="form-control" id="lname" placeholder = "Last Name" /><br />
-        <b>@Majorsilence.Vpn.Site.Resources.Main.Email:</b> <input type="email" name="email" class="form-control" id="email" placeholder = "Email Address" autocorrect="off" autocapitalize="off" /><br />
-        <b>@Majorsilence.Vpn.Site.Resources.Main.ConfirmEmail:</b> <input type="email" name="cemail" class="form-control" id="cemail" placeholder = "Confirm Email Address" autocorrect="off" autocapitalize="off" /><br />
-        <b>@Majorsilence.Vpn.Site.Resources.Main.Password:</b> <input type="password" name="password" class="form-control" id="password" placeholder = "Password" autocorrect="off" autocapitalize="off" /><br />
-        <b>@Majorsilence.Vpn.Site.Resources.Main.ConfirmPassword:</b> <input type="password" name="cpassword" class="form-control" id="cpassword" placeholder = "Confirm Password" autocorrect="off" autocapitalize="off" /><br />
+    <div class="form-group">
+        <b>Beta Key:</b> <input type="text" name="fname" class="form-control" id="betaKeyText" placeholder="Beta Key" /><br />
+        <b>@Localizer["FirstName"]:</b> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" /><br />
+        <b>@Localizer["LastName"]:</b> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name" /><br />
+        <b>@Localizer["Email"]:</b> <input type="email" name="email" class="form-control" id="email" placeholder="Email Address" autocorrect="off" autocapitalize="off" /><br />
+        <b>@Localizer["ConfirmEmail"]:</b> <input type="email" name="cemail" class="form-control" id="cemail" placeholder="Confirm Email Address" autocorrect="off" autocapitalize="off" /><br />
+        <b>@Localizer["Password"]:</b> <input type="password" name="password" class="form-control" id="password" placeholder="Password" autocorrect="off" autocapitalize="off" /><br />
+        <b>@Localizer["ConfirmPassword"]:</b> <input type="password" name="cpassword" class="form-control" id="cpassword" placeholder="Confirm Password" autocorrect="off" autocapitalize="off" /><br />
         <input type="submit" value="Submit" id="createuser" class="btn btn-primary btn-lg" />
     </div>
 </form>
@@ -24,9 +26,9 @@
 <script src="/assets/javascript/newuser.js" type="text/javascript"></script>
 <script type="text/javascript">
 	@{
-     <text>    
+     <text>
 	      $(function () {
-	 
+
 	         NewUser.Init(@(LibLogic.Helpers.SiteInfo.LiveSite.ToString().ToLower()), false);
 	     });
      </text>
