--- a/WebSite/VpnSite/Views/terms/Index.cshtml
+++ b/WebSite/VpnSite/Views/terms/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@model Majorsilence.Vpn.Site.Models.Terms
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 @{
     ViewBag.Title = "Terms of Service";
     Layout = "~/Views/GeneralLayout.cshtml";
 }
 
- <h1>@Majorsilence.Vpn.Site.Resources.Main.FooterTos</h1>
+<h1>@Localizer["FooterTos"]</h1>
 
- @Html.Raw(Model.TOS.Terms)
+@Html.Raw(Model.TOS.Terms)
