--- a/WebSite/VpnSite/Views/validatecode/Index.cshtml
+++ b/WebSite/VpnSite/Views/validatecode/Index.cshtml
@@ -1,52 +1,55 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+@{
     ViewBag.Title = "Validate Reset Password Code";
     Layout = "~/Views/GeneralLayout.cshtml";
 }
 
 @{
-	string resetcode = ViewData["resetcode"]?.ToString();
-	if (resetcode == null)
-	{
-		resetcode="";
-	}
+    string resetcode = ViewData["resetcode"]?.ToString();
+    if (resetcode == null)
+    {
+        resetcode = "";
+    }
 
 }
 
 
-<h1>@Majorsilence.Vpn.Site.Resources.Main.ResetPassword</h1>
+<h1>@Localizer["ResetPassword"]</h1>
 
 <form name="input" method="post" class="form">
-    <b>@Majorsilence.Vpn.Site.Resources.Main.ResetCode:</b>
-	
-	@{	 
- 		if(resetcode != "")
-		{
-			<input type="text" name="code" id="resetCode" placeholder="Reset Code" autocorrect="off" autocapitalize="off" class="form-control" value="@(resetcode)" /><br />
-		}
-		else
-		{
-			 <input type="text" name="code" id="resetCode" placeholder="Reset Code" autocorrect="off" autocapitalize="off" class="form-control" /><br />
-		}
-	}
+    <b>@Localizer["ResetCode"]:</b>
 
-   
+    @{
+        if (resetcode != "")
+        {
+            <input type="text" name="code" id="resetCode" placeholder="Reset Code" autocorrect="off" autocapitalize="off" class="form-control" value="@(resetcode)" /><br />
+        }
+        else
+        {
+            <input type="text" name="code" id="resetCode" placeholder="Reset Code" autocorrect="off" autocapitalize="off" class="form-control" /><br />
+        }
+    }
 
-    <b>@Majorsilence.Vpn.Site.Resources.Main.NewPassword:</b>
+
+
+    <b>@Localizer["NewPassword"]:</b>
     <input type="password" name="code" id="newpsw" placeholder="New Password" class="form-control" autocorrect="off" autocapitalize="off" /><br />
 
-    <b>@Majorsilence.Vpn.Site.Resources.Main.ConfirmPassword:</b>
+    <b>@Localizer["ConfirmPassword"]:</b>
     <input type="password" name="code" id="cnewpsw" placeholder="Confirm Password" class="form-control" autocorrect="off" autocapitalize="off" /><br />
     <input type="submit" value="Submit" id="validatemyresetcode" class="btn btn-success" />
 </form>
 
- <script src="/assets/javascript/validateresetcode.js" type="text/javascript"></script>
- <script>
+<script src="/assets/javascript/validateresetcode.js" type="text/javascript"></script>
+<script>
       @{
-     <text>   
+     <text>
     $(document).ready(function () {
          ValidateResetCode.Init();
      });
-	     
+
      </text>
 	 }
 
