--- a/WebSite/Majorsilence.Vpn.Site/Views/Vpn.cshtml
+++ b/WebSite/Majorsilence.Vpn.Site/Views/Vpn.cshtml
@@ -77,11 +77,11 @@
 
                     if (pagename == "/services")
                     {
-                        menu.Append("<li class=\"active\"><a href=\"/services\"><span>" + Localizer["MenuServices"] + "</span></a></li>");
+                        menu.Append("<li class=\"active\"><a href=\"/services\"><span>" + Localizer["MenuServices"].Value + "</span></a></li>");
                     }
                     else
                     {
-                        menu.Append("<li><a href=\"/services\"><span>" + Localizer["MenuServices"] + "</span></a></li>");
+                        menu.Append("<li><a href=\"/services\"><span>" + Localizer["MenuServices"].Value + "</span></a></li>");
                     }
 
                     if (pagename == "/newsfeed")
@@ -99,7 +99,7 @@
                     }
                     else
                     {
-                        menu.Append("<li><a href=\"/setup\"><span>" + Localizer["MenuSetup"] + "</span></a></li>");
+                        menu.Append("<li><a href=\"/setup\"><span>" + Localizer["MenuSetup"].Value + "</span></a></li>");
                     }
                     if (Model.SessionVariables.LoggedIn)
                     {
@@ -158,9 +158,9 @@
                                         {
                                             <li><a href="/admin">Admin</a></li>
  } }
-                                    <li><a href="/account">@Localizer["MenuAccount"]</a></li>
+                                    <li><a href="/account">@Localizer["MenuAccount"].Value</a></li>
                                     <li><a href="/invite">Invite Friends</a></li>
-                                    <li><a href="/logout"> @Localizer["MenuLogout"]</a></li>
+                                    <li><a href="/logout"> @Localizer["MenuLogout"].Value</a></li>
 
                                 </ul>
                             </li>
@@ -194,17 +194,17 @@
                 </div>
                 <div class="col-md-2">
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="/terms" class="navbar-link">@Localizer["FooterTos"]</a></li>
+                        <li><a href="/terms" class="navbar-link">@Localizer["FooterTos"].Value</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2">
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="/privacy">@Localizer["FooterPPolicy"]</a></li>
+                        <li><a href="/privacy">@Localizer["FooterPPolicy"].Value</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2">
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="/pricing">@Localizer["FooterPrice"]</a></li>
+                        <li><a href="/pricing">@Localizer["FooterPrice"].Value</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2">
@@ -214,7 +214,7 @@
                 </div>
                 <div class="col-md-2">
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="/about">@Localizer["MenuAboutUs"]</a></li>
+                        <li><a href="/about">@Localizer["MenuAboutUs"].Value</a></li>
                     </ul>
                 </div>
                 <div class="col-md-1">
@@ -226,8 +226,8 @@
             <div class="col-lg-12">
                 <ul class="nav nav-pills nav-justified">
                     <li>
-                        @Html.Raw(Localizer["FooterCopR"])
-                        <strong itemscope itemtype="https://schema.org/Organization">@Localizer["CompanyName"]</strong>
+                        @Localizer["FooterCopR"].Value
+                        <strong itemscope itemtype="https://schema.org/Organization">@Localizer["CompanyName"].Value</strong>
                     </li>
                     <li>
                         <select id="lanSelect" class="form-control">
